Aspect-ratio buggy on ios devices. Setting height manually too

--- a/index.css
+++ b/index.css
@@ -148,8 +148,9 @@ main {
 
 .guessLetter {
   margin: 2px;
-  height: auto;
-  aspect-ratio: 1 /1;
+  /* IOS Safari is the new IE */
+  /* height: auto;
+  aspect-ratio: 1 /1; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -315,7 +316,7 @@ body[data-gamestate="failure"] .challenge-button, body[data-gamestate="failure"]
 }
 
 .keyboard {
-  padding: 8px 0;
+  margin-bottom: 20px;
   max-width: 95%;
   display: flex;
   flex-direction: column;
@@ -390,7 +391,7 @@ body[data-gamestate="failure"] .challenge-button, body[data-gamestate="failure"]
 
 /* Header */
 header {
-  height: 40px;
+  height: 50px;
   position: relative;
   display: flex;
   width: 100%;
